Get project compiling